--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "abappgp",
   "version": "1.0.0",
   "description": "ABAP implementation of OpenPGP",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "npx abaplint && npm run unit",
     "unit": "rm -rf output && abap_transpile test/abap_transpile.json && echo RUNNING && node output/index.mjs"
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/larshp/abapPGP#readme",
   "dependencies": {
-    "@abaplint/cli": "^2.91.3",
-    "@abaplint/runtime": "^2.0.38",
-    "@abaplint/transpiler-cli": "^2.0.38"
+    "@abaplint/cli": "^2.91.8",
+    "@abaplint/runtime": "^2.0.69",
+    "@abaplint/transpiler-cli": "^2.0.69"
   }
 }
