--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "npx abaplint && npm run unit",
-    "unit": "rm -rf output && abap_transpile test/abap_transpile.json && echo RUNNING && node output/index.mjs"
+    "unit": "rm -rf output && abap_transpile abap_transpile.json && echo RUNNING && node output/index.mjs"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/larshp/abapPGP#readme",
   "dependencies": {
-    "@abaplint/cli": "^2.91.8",
-    "@abaplint/runtime": "^2.0.69",
-    "@abaplint/transpiler-cli": "^2.0.69"
+    "@abaplint/cli": "^2.94.6",
+    "@abaplint/runtime": "^2.3.87",
+    "@abaplint/transpiler-cli": "^2.3.87"
   }
 }
