--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ABAP implementation of OpenPGP",
   "private": true,
   "scripts": {
-    "test": "npx abaplint && npm run unit",
-    "unit": "rm -rf output && abap_transpile abap_transpile.json && sed -i 's/break;//ig' ./output/zcl_aes_utility.clas.mjs && echo RUNNING && node output/index.mjs"
+    "test": "abaplint && npm run unit",
+    "unit": "rm -rf output && abap_transpile abap_transpile.json && echo RUNNING && node output/index.mjs"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/larshp/abapPGP#readme",
   "dependencies": {
     "@abaplint/cli": "^2.102.2",
-    "@abaplint/runtime": "^2.7.35",
-    "@abaplint/transpiler-cli": "^2.7.35"
+    "@abaplint/runtime": "^2.7.39",
+    "@abaplint/transpiler-cli": "^2.7.39"
   }
 }
