--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "abaplint && npm run unit",
+    "flame-graph": "0x -o output/index.mjs",
     "unit": "rm -rf output && abap_transpile abap_transpile.json && echo RUNNING && node output/index.mjs"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "dependencies": {
     "@abaplint/cli": "^2.106.5",
     "@abaplint/runtime": "^2.8.22",
+    "0x": "^5.7.0",
     "@abaplint/transpiler-cli": "^2.8.22"
   }
 }
